--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ font-weight: 400;
 line-height: 15px;
 letter-spacing: 0em;
 padding: 9px 0 17px 0;
+text-decoration: none;
 }
 
 .header-buttons {
@@ -60,7 +61,7 @@ padding: 9px 0 17px 0;
   justify-content: center;
   align-items: center;
   gap: 17px ;
-  padding: 0px 13px 9px 11px;
+  padding: 17px 13px 9px 11px;
 }
 
 .header-button-1, .header-button-2 {
@@ -124,6 +125,7 @@ color: #2B283A;
   line-height: 150%;
   padding-top: 5px;
   color: #4A4E74;
+  text-align: justify;
 }
 
 
@@ -164,6 +166,7 @@ font-size: 10.24px;
 line-height: 150%;
 color: #4A4E74;
 padding-top: 5px;
+text-align: justify;
 }
 
 
@@ -173,4 +176,26 @@ padding-top: 5px;
 .footer-container {
   background: #D5D4D8;
   height: 64px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.social-container {
+  background: #918E9B
+}
+
+.twitter-social, .instagram-social, .github-social, .facebook-social {
+  color: #D5D4D8;
+  padding: 5px;
+}
+
+.twitter-social:hover,
+.instagram-social:hover,
+.facebook-social:hover,
+.github-social:hover
+{
+  color: #c9c5d3;
+  transform: translateY(-2px);
 }
